# vscvm

./: .gitignore  README.md  setup.cfg  tox.ini
.github/workflows/: pytest.yml  tox.yml
src/vscvm/: __init__.py
tests/: cli_test.py  vscvm_test.py
