[metadata]
name = vscvm
version = 0.1.0
description = A VSCode version manager.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tusharsadhwani/vscvm
author = Tushar Sadhwani
author_email = tushar.sadhwani000@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    beautifulsoup4>=4.9
python_requires = >=3.6
package_dir = =src

[options.packages.find]
where = ./src

[options.entry_points]
console_scripts =
    vsc=vscvm:cli

[options.extras_require]
dev =
    black
    mypy
    pytest
